# nube_cositas_aws

./: AWS_SECURITY_GROUPS.md  README.md  UPGRADE_SUMMARY.md  addres.md  configure.sh  update_config.sh
back/: crud.py  database.py  env.example  env.local  env.production  install.sh  main.py  models.py  pyproject.toml  run.sh  schemas.py  setup_cors.sh
db/: MIGRATION_README.md  init.sql  install.sh  migration_add_content.sql  migration_runner.sh  run.sh
front/: README.md  config.js  config.production.js  index.html  install.sh  run.sh  script.js  style.css
nginx/: README.md  deploy.sh  install_nginx.sh  nginx.conf
